--- a/virtual.css
+++ b/virtual.css
@@ -116,6 +116,9 @@ a:hover, a:active {
 .img-place > img {
     width: 100%;height: auto;
 }
+.img-caption{
+    opacity: 30%;
+}
 
 /* Overlay */
 .overlay {
